# meta-scaler

./: Dockerfile  README.md  inference.py  openenv.yaml  submission.json
server/: app.py
supply_chain_env/: .gitignore  Dockerfile  README.md  openenv.yaml  pyproject.toml  requirements.txt
supply_chain_env/scripts/: baseline_inference.py
supply_chain_env/src/supply_chain_env/: __init__.py  env.py  server.py
supply_chain_env/src/supply_chain_env.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
supply_chain_env/tasks/: graders.py
